--- a/style.css
+++ b/style.css
@@ -391,7 +391,7 @@ body {
 .headland {
   min-width: 100%;
   height: 63rem;
-  background-image: url(./Assets/landingheader.jpg);
+  background-image: url(/Assets/landingheader.jpg);
   background-color: grey;
   background-blend-mode: multiply;
   background-size: cover;
@@ -426,35 +426,29 @@ body {
 .headabout {
   min-width: 100%;
   height: 60rem;
-  background-image: url(./Assets/headerabout.jpg);
-  background-color: grey;
-  background-blend-mode: multiply;
   background-size: cover;
+  background-image: url(/Assets/headerabout.jpg);
 }
 
 .headourpartner {
   min-width: 100%;
   height: 60rem;
-  background-image: url(./Assets/headerourpartner.jpg);
-  background-color: grey;
-  background-blend-mode: multiply;
   background-size: cover;
+  background-image: url(/Assets/headerourpartner.jpg);
 }
 
 .headteam {
   min-width: 100%;
   height: 60rem;
-  background-image: url(./Assets/headerconf.jpg);
-  background-color: grey;
-  background-blend-mode: multiply;
   background-size: cover;
+  background-image: url(/Assets/headerconf.jpg);
 }
 
 .headhelpus {
   min-width: 100%;
   height: 60rem;
   background-size: cover;
-  background-image: url(./Assets/headerhelp.jpg);
+  background-image: url(/Assets/headerhelp.jpg);
 }
 
 @media (max-width: 1024px) {
@@ -612,7 +606,8 @@ body {
 
 /* Below styles for accomplishments */
 .accomplishments {
-  padding: 5rem;
+  padding-top: 5rem;
+  padding-bottom: 2rem;
 }
 
 .accomplishments h2 {
@@ -669,6 +664,18 @@ body {
   position: relative;
   width: calc((100%/4) - 2%);
   margin: 1%;
+}
+
+.filler {
+  border: 1px dotted brown;
+  font-size: 1.5rem;
+  width: 90%;
+  display: block;
+  margin: auto;
+  text-align: center;
+  padding: 1rem;
+  margin: 2rem;
+  display: none;
 }
 
 .description {
@@ -1228,6 +1235,9 @@ body {
   .ourphilosophy p {
     font-size: 1.8rem;
   }
+  .accomplishments {
+    padding-bottom: 0rem;
+  }
   .accomplishments section {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1247,6 +1257,10 @@ body {
   }
   .accomplishments .container .words p {
     font-size: 1.9rem;
+  }
+  .filler {
+    display: block;
+    margin-top: -1rem;
   }
   .firsttestimonial,
   .secondtestimonial {
@@ -1272,12 +1286,14 @@ body {
         -ms-grid-row-align: start;
         align-self: start;
     text-align: center;
+    margin-bottom: -1rem;
   }
   .secondtestimonial .image {
     -ms-flex-item-align: end;
         -ms-grid-row-align: end;
         align-self: end;
     text-align: center;
+    margin-top: 3rem;
   }
   .secondtestimonial .words {
     -ms-flex-item-align: end;
@@ -1286,7 +1302,7 @@ body {
     margin-top: -2.5rem;
   }
   .secondtestimonial {
-    margin-top: -25rem;
+    border-top: 1px dotted brown;
   }
   .chat .forms .dropdown {
     width: 100%;
@@ -1426,9 +1442,9 @@ footer p {
 }
 
 footer p span {
-  background-color: #F0D000;
   border-radius: 1rem;
-  border: 1px dotted black;
+  -webkit-text-decoration: underline 2px wavy #F0D000;
+          text-decoration: underline 2px wavy #F0D000;
   padding: 1rem;
 }
 
