--- a/style.css
+++ b/style.css
@@ -606,8 +606,9 @@ body {
 
 /* Below styles for accomplishments */
 .accomplishments {
-  padding-top: 5rem;
-  padding-bottom: 2rem;
+  padding: 5rem;
+  position: relative;
+  z-index: 2;
 }
 
 .accomplishments h2 {
@@ -664,18 +665,6 @@ body {
   position: relative;
   width: calc((100%/4) - 2%);
   margin: 1%;
-}
-
-.filler {
-  border: 1px dotted brown;
-  font-size: 1.5rem;
-  width: 90%;
-  display: block;
-  margin: auto;
-  text-align: center;
-  padding: 1rem;
-  margin: 2rem;
-  display: none;
 }
 
 .description {
@@ -1236,7 +1225,7 @@ body {
     font-size: 1.8rem;
   }
   .accomplishments {
-    padding-bottom: 0rem;
+    padding-bottom: 3rem;
   }
   .accomplishments section {
     display: -webkit-box;
@@ -1257,10 +1246,6 @@ body {
   }
   .accomplishments .container .words p {
     font-size: 1.9rem;
-  }
-  .filler {
-    display: block;
-    margin-top: -1rem;
   }
   .firsttestimonial,
   .secondtestimonial {
@@ -1434,6 +1419,8 @@ body {
 footer {
   background-color: #ff995e;
   padding: 1rem;
+  position: relative;
+  z-index: 100;
 }
 
 footer p {
