improving css for the header text mobile version

--- a/style.css
+++ b/style.css
@@ -516,6 +516,8 @@ body {
 		height: 35rem;
 	}
 	.headertext h1 {
+		border-radius: 0rem;
+		padding-top: 0.5rem;
 		font-size: 3rem;
 		width: 100%;
 		padding: 0rem;
